<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/backgroundall">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="150dp" />
    <!--&lt;!&ndash;分割线&ndash;&gt;-->
    <!--<View-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="2dp"-->
        <!--android:background="@color/colorAccent"/>-->
    <!--输入用户名账号密码界面-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/UserName"
            android:textSize="30sp"
            android:padding="20dp"/>
        <EditText
            android:id="@+id/user_account"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/support" />
    </LinearLayout>
    <!--输入用户名密码界面-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/PassWord"
            android:textSize="30sp"
            android:padding="20dp"/>
        <EditText
            android:id="@+id/user_psw"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/supportpsw"
            android:inputType="textPassword"/>
    </LinearLayout>
    <!--&lt;!&ndash;分割线&ndash;&gt;-->
    <!--<View-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="2dp"-->
        <!--android:background="@color/colorAccent"/>-->
    <!--设置是否需要记住账号密码-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <CheckBox
            android:id="@+id/remember_psw"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginLeft="20dp"
            android:layout_marginStart="20dp" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/supportCheck"
            android:layout_marginTop="20dp"
            android:textSize="20sp"/>
    </LinearLayout>
    <!--登录注册按钮-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <Button
            android:id="@+id/login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginLeft="70dp"
            android:layout_marginStart="70dp"
            android:text="@string/login"
            android:textSize="20sp"/>
        <Button
            android:id="@+id/register"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginLeft="50dp"
            android:layout_marginStart="50dp"
            android:textSize="20sp"
            android:text="@string/register" />
    </LinearLayout>


</LinearLayout>