<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".View.ConstitutionActivity">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="10dp">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <!--说明文本-->
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="30sp"
                android:text="@string/shuoming"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/instruction"
                android:textSize="20sp"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="30sp"
                android:text="@string/judge"/>

            <!--体质判定方法得分标准-->
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/content"
                android:textSize="20sp"/>
            <!--前三种体质-->
            <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_margin="10dp">
            <com.example.hasee.shiyuji.Button.StateButton
                android:id="@+id/peace"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/peace"
                android:textSize="20sp"
                app:radius="5dp"
                app:animationDuration="200"
                app:normalStrokeWidth="2dp"
                app:pressedStrokeWidth="4dp"
                android:layout_margin="5dp"
                app:normalBackgroundColor="@color/lightGray"/>
            <com.example.hasee.shiyuji.Button.StateButton
                android:id="@+id/lack_of_yang"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/lack_of_yang"
                android:textSize="20sp"
                app:radius="5dp"
                app:animationDuration="200"
                app:normalStrokeWidth="2dp"
                app:pressedStrokeWidth="4dp"
                android:layout_margin="5dp"
                app:normalBackgroundColor="@color/lightGray"/>
            <com.example.hasee.shiyuji.Button.StateButton
                android:id="@+id/lack_of_yin"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/lack_of_yin"
                android:textSize="20sp"
                app:radius="5dp"
                app:animationDuration="200"
                app:normalStrokeWidth="2dp"
                app:pressedStrokeWidth="4dp"
                android:layout_margin="5dp"
                app:normalBackgroundColor="@color/lightGray"/>
        </LinearLayout>
            <!--中间三种体质-->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_margin="10dp">
                <com.example.hasee.shiyuji.Button.StateButton
                    android:id="@+id/phlegm_wet"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/phlegm_wet"
                    android:textSize="20sp"
                    app:radius="5dp"
                    app:animationDuration="200"
                    app:normalStrokeWidth="2dp"
                    app:pressedStrokeWidth="4dp"
                    android:layout_margin="5dp"
                    app:normalBackgroundColor="@color/lightGray"/>
                <com.example.hasee.shiyuji.Button.StateButton
                    android:id="@+id/wet_hot"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/wet_hot"
                    android:textSize="20sp"
                    app:radius="5dp"
                    app:animationDuration="200"
                    app:normalStrokeWidth="2dp"
                    app:pressedStrokeWidth="4dp"
                    android:layout_margin="5dp"
                    app:normalBackgroundColor="@color/lightGray"/>
                <com.example.hasee.shiyuji.Button.StateButton
                    android:id="@+id/full_of_qi"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/full_of_qi"
                    android:textSize="20sp"
                    app:radius="5dp"
                    app:animationDuration="200"
                    app:normalStrokeWidth="2dp"
                    app:pressedStrokeWidth="4dp"
                    android:layout_margin="5dp"
                    app:normalBackgroundColor="@color/lightGray"/>
            </LinearLayout>

            <!--最后三种体质-->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_margin="10dp">
                <com.example.hasee.shiyuji.Button.StateButton
                    android:id="@+id/lack_of_qi"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/lack_of_qi"
                    android:textSize="20sp"
                    app:radius="5dp"
                    app:animationDuration="200"
                    app:normalStrokeWidth="2dp"
                    app:pressedStrokeWidth="4dp"
                    android:layout_margin="5dp"
                    app:normalBackgroundColor="@color/lightGray"/>
                <com.example.hasee.shiyuji.Button.StateButton
                    android:id="@+id/blood"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/blood"
                    android:textSize="20sp"
                    app:radius="5dp"
                    app:animationDuration="200"
                    app:normalStrokeWidth="2dp"
                    app:pressedStrokeWidth="4dp"
                    android:layout_margin="5dp"
                    app:normalBackgroundColor="@color/lightGray"/>
                <com.example.hasee.shiyuji.Button.StateButton
                    android:id="@+id/special_quality"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/special_quality"
                    android:textSize="20sp"
                    app:radius="5dp"
                    app:animationDuration="200"
                    app:normalStrokeWidth="2dp"
                    app:pressedStrokeWidth="4dp"
                    android:layout_margin="5dp"
                    app:normalBackgroundColor="@color/lightGray"/>
            </LinearLayout>

            <!--中医体质判定表-->
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/judge_constitution"
                android:textSize="30sp"
                android:gravity="center_horizontal"/>
            <ImageView
                android:layout_width="match_parent"
                android:layout_height="270dp"
                android:scaleType="fitXY"
                android:src="@drawable/judge_constitution"
                android:layout_gravity="center_horizontal"
                android:contentDescription="@string/judge_constitution" />

        </LinearLayout>
    </ScrollView>

</LinearLayout>