<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical">

    <!--卡片布局，用来显示问题描述-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:layout_marginTop="35dp"
                android:layout_marginRight="15dp"
                android:layout_marginBottom="15dp"
                app:cardCornerRadius="4dp">
                <!--问题描述文本框-->
                <TextView
                    android:id="@+id/ques_des"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:textSize="16sp"
                    android:hint="填写问题描述"/>
            </android.support.v7.widget.CardView>
        </LinearLayout>


    <!--分割线-->
    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="@color/colorAccent" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <Button
            android:textSize="16sp"
            android:id="@+id/ques_cold"
            android:text="@string/cold"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"/>
        <Button
            android:textSize="16sp"
            android:id="@+id/ques_cool"
            android:text="@string/cool"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"/>
        <Button
            android:textSize="16sp"
            android:id="@+id/ques_hot"
            android:text="@string/hot"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"/>
        <Button
            android:textSize="16sp"
            android:id="@+id/ques_warm"
            android:text="@string/warm"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"/>
        <Button
            android:textSize="16sp"
            android:id="@+id/ques_normal"
            android:text="@string/normal"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"/>
    </LinearLayout>

    <!--分割线-->
    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="@color/colorAccent" />

    <!--使用CoordinatorLayout是为了更好的管理布局中的控件-->
    <android.support.design.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <android.support.v7.widget.RecyclerView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/food_choice"/>
    </android.support.design.widget.CoordinatorLayout>

    <!--分割线-->
    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="@color/colorAccent" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/ques_back"
        android:text="@string/back"
        android:textSize="16sp"/>



</LinearLayout>