<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/title"
        android:textSize="60sp"/>

    <android.support.v7.widget.CardView
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="60dp">
        <com.example.hasee.shiyuji.Button.StateButton
            android:id="@+id/enterGame"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:text="@string/enterGame"
            android:textSize="30sp"
            app:radius="5dp"
            app:animationDuration="200"
            app:normalStrokeWidth="2dp"
            app:pressedStrokeWidth="4dp"
            app:normalBackgroundColor="@color/lightGray"/>
    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="60dp">
        <com.example.hasee.shiyuji.Button.StateButton
            android:id="@+id/constitution"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:text="@string/constitution"
            android:textSize="30sp"
            app:radius="5dp"
            app:animationDuration="200"
            app:normalStrokeWidth="2dp"
            app:pressedStrokeWidth="4dp"
            app:normalBackgroundColor="@color/lightGray"/>

    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="60dp">
        <com.example.hasee.shiyuji.Button.StateButton
            android:id="@+id/forum"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:text="@string/forum"
            android:textSize="30sp"
            app:radius="5dp"
            app:animationDuration="200"
            app:normalStrokeWidth="2dp"
            app:pressedStrokeWidth="4dp"
            app:normalBackgroundColor="@color/lightGray"/>

    </android.support.v7.widget.CardView>


</LinearLayout>